; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/platform/mtk-vcodec/extr_mtk_vcodec_dec.c_vb2ops_vdec_start_streaming.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/platform/mtk-vcodec/extr_mtk_vcodec_dec.c_vb2ops_vdec_start_streaming.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vb2_queue = type { i32 }
%struct.mtk_vcodec_ctx = type { i64 }

@MTK_STATE_FLUSH = common dso_local global i64 0, align 8
@MTK_STATE_HEADER = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vb2_queue*, i32)* @vb2ops_vdec_start_streaming to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vb2ops_vdec_start_streaming(%struct.vb2_queue* %0, i32 %1) #0 {
  %3 = alloca %struct.vb2_queue*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.mtk_vcodec_ctx*, align 8
  store %struct.vb2_queue* %0, %struct.vb2_queue** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.vb2_queue*, %struct.vb2_queue** %3, align 8
  %7 = call %struct.mtk_vcodec_ctx* @vb2_get_drv_priv(%struct.vb2_queue* %6)
  store %struct.mtk_vcodec_ctx* %7, %struct.mtk_vcodec_ctx** %5, align 8
  %8 = load %struct.mtk_vcodec_ctx*, %struct.mtk_vcodec_ctx** %5, align 8
  %9 = getelementptr inbounds %struct.mtk_vcodec_ctx, %struct.mtk_vcodec_ctx* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @MTK_STATE_FLUSH, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %17

13:                                               ; preds = %2
  %14 = load i64, i64* @MTK_STATE_HEADER, align 8
  %15 = load %struct.mtk_vcodec_ctx*, %struct.mtk_vcodec_ctx** %5, align 8
  %16 = getelementptr inbounds %struct.mtk_vcodec_ctx, %struct.mtk_vcodec_ctx* %15, i32 0, i32 0
  store i64 %14, i64* %16, align 8
  br label %17

17:                                               ; preds = %13, %2
  ret i32 0
}

declare dso_local %struct.mtk_vcodec_ctx* @vb2_get_drv_priv(%struct.vb2_queue*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
